# leaf

./: .env.test  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: release.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20251019_194941_create_connections_table.rs  m20251025_205133_create_plans_table.rs  m20251025_220607_create_changesets_table.rs  m20251103_185312_create_deployments_table.rs  m20251105_220916_create_changes_table.rs  m20251110_164816_create_rollbacks_table.rs  main.rs
scripts/: init-demo.sh  run_tests.sh  setup_local_oracle.sh  test_oracle_ignored.sh
scripts/examples/: hooks_demo.sql
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: database.rs  hooks.rs  log.rs  mod.rs  rules.rs  settings.rs
src/db/: db.rs  migrations.rs  mod.rs
src/delta/: delta.rs  mod.rs
src/entities/: change.rs  changeset.rs  connection.rs  deployment.rs  mod.rs  plan.rs  rollback.rs
src/errors/: mod.rs
src/hooks/: hook_runner.rs  mod.rs
src/oracle/: client.rs  mod.rs
src/repo/: change_repo.rs  changeset_repo.rs  connection_repo.rs  deployment_repo.rs  mod.rs  plan_repo.rs  rollback_repo.rs
src/services/: connection_service.rs  deployment_service.rs  mod.rs  plan_service.rs
src/types/: change_status.rs  changeset_status.rs  delta.rs  deployment_result.rs  deployment_status.rs  hooks.rs  mod.rs  oracle.rs  plan_status.rs  rollback_status.rs  string_list.rs
src/utils/: deployment_context.rs  deployment_sink.rs  fs.rs  init.rs  logger.rs  mod.rs  parsers.rs  progress.rs  queries.rs  script_writer.rs  serde.rs  time.rs  utils.rs
tests/: test_main.rs
tests/common/: env.rs  mod.rs  oracle.rs  repo.rs  seeds.rs
tests/oracle/: mod.rs  test_client.rs  test_objects.rs  test_seeds.rs
tests/services/: mod.rs  test_connection_service.rs  test_plan_service.rs  (+1 more)
(+15 files in other folders)
