[package]
edition = "2024"
name = "leaf"
version = "0.1.4"

[lib]
name = "leaf"
path = "src/lib.rs"

[[bin]]
name = "leaf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4", features = ["derive", "cargo"]}
colored = "3.0.0"
config = "0.14"
dotenvy = "0.15"
indicatif = "0.17"
inquire = "0.9.1"
itertools = "0.14.0"
migration = {path = "migration"}
oracle = {version = "0.6.3", features = ["chrono"]}
rust-embed = {version = "8.8.0", features = ["debug-embed"]}
sea-orm = {version = "2.0.0-rc.17", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
tabled = {version = "0.20.0", features = ["ansi"]}
tera = "1.20"
terminal_size = "0.4.3"
thiserror = "2.0.17"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3", features = ["fmt", "env-filter", "chrono", "json"]}
uuid = {version = "1", features = ["v4"]}
validator = "0.16"
validator_derive = "0.16"

[dev-dependencies]
sea-orm = {version = "2.0.0-rc.17", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"]}
serial_test = "3.2"
tempfile = "3.23.0"
