[package]
edition = "2021"
name = "migration"
version = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
dotenvy = "0.15"
sea-orm-migration = "2.0.0-rc.17"
tokio = {version = "1", features = ["full"]}

[dependencies.sea-orm]
features = ["sqlx-sqlite", "runtime-tokio-native-tls"]
version = "1.1"
